<resources>
    <string name="app_name">FANYHEALTH</string>
    <string name="i_am_a">I am a</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="speciality_ex_primary_care">Speciality ex. Primary Care</string>
    <string name="hourly_rate_number_only">hourly rate (number only)</string>
    <string name="submit">Submit</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="welcome_to_fanyhealth">Welcome to FANYHEALTH !</string>
    <string name="password2">Password</string>
    <string name="accepted">Accepted, upcoming Appointments</string>
    <string name="pending">Pending Appointments</string>
    <string name="edit">Edit Appointment</string>
    <string name="accept">Accept Appointment</string>
    <string name="reject">Reject Appointment</string>
    <string-array name="users_array">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
</resources>
