<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="244dp"
            android:layout_height="42dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="244dp"
            android:layout_height="46dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="241dp"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/email"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/speciality_ex_primary_care"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="235dp"
            android:layout_height="70dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hourly_rate_number_only"
            android:inputType="number" />

        <Button
            android:id="@+id/button"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>