<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AppointmentsActivity">

    <TextView
        android:id="@+id/acceptedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/accepted"/>

    <Spinner
        android:id="@+id/upcoming_spinner"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/editAppointmentUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_gravity="center"
        android:onClick="onEditButtonClick" />

    <TextView

            android:text="@string/pending"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/pending_spinner"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="27dp" />

    <Button android:id="@+id/editPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit"
        android:onClick="onEditButtonClick" />

    <Button android:id="@+id/acceptPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_gravity="center"
        android:onClick="onAcceptButtonClick" />

    <Button
        android:id="@+id/RejectPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onRejectButtonClick"
        android:text="@string/reject" />

</LinearLayout>
