<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Username"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patientActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Full Name"
            android:gravity="center"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="244dp"
            android:layout_height="42dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="244dp"
            android:layout_height="46dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password2"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="241dp"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/email"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="237dp"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/button"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>